@@ -1,5 +1,9 @@
 2001-02-17  Kenichi OKADA <okada@opaopa.org>
 
+	* sasl-scram.el(sasl-scram-md5-make-unique-nonce): Rewrite.
+
+2001-02-17  Kenichi OKADA <okada@opaopa.org>
+
 	* sasl-scram.el: Add comment.
 	(sasl-scram-md5-steps): New variable.
 	(sasl-scram-md5-make-client-msg-1): Add optional nonce.
